<resources>
    <string name="app_name">Jonas Scanner</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_database_handler">DatabaseHandler</string>
    <string name="select_label">Select Label</string>
    <string name="title_activity_charge">ChargeActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="add_new_label_label">Add New Code</string>
    <string name="add_label_button">Add Code</string>
    <string name="select_label_label">Select Code</string>
    <string name="del_label_button">Delete Code</string>
    <string name="charge_parts_label">Charge Parts</string>
    <string name="charge_button">Charge</string>
    <string name="configure_label">Configure</string>
    <string name="config_button">Config</string>
    <string name="settings_label">Settings</string>
    <string name="settings_button">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="date_button">Date</string>
    <string name="save_button">Save</string>
    <string name="send_button">Send</string>
    <string name="account_settings_label">Account Settings:</string>
    <string name="email_account_name_label">Email Account Name:*</string>
    <string name="email_account_password_label">Email Account Password:*</string>
    <string name="email_settings_label">Email Settings:</string>
    <string name="from_label">From:</string>
    <string name="to_label">To:*</string>
    <string name="subject_label">Subject:</string>
    <string name="body_label">Body:</string>
    <string name="exit_button">Exit</string>
    <string name="back_button">Back</string>
    <string name="simple_date_format">yyyy / MM / dd</string>
    <string name="filename_simple_date_format">yyyy-MM-dd_HH-mm-ss</string>
    <string name="filename_extension">_sendpart.txt</string>
    <string name="upload_filename_extension">_upload.txt</string>
    <string name="whse_transfer_filename_extension">_whsetran.txt</string>
    <string name="po_receive_filename_extension">_poreceive.txt</string>
    <string name="inventory_count_filename_extension">_inventoryCount.txt</string>
    <string name="toast_filename_is_label">The fileName is:</string>
    <string name="toast_you_selected_label">You selected:</string>
    <string name="toast_goodbye_message">Thanks for using BlueHarvest!</string>
    <string name="onbackpress_dialog_title">Back to MainActivity?</string>
    <string name="onbackpress_dialog_message">Are you sure? Data will be lost if you have not clicked SEND_</string>
    <string name="savemsg_dialog_title">Nothing to send!</string>
    <string name="savemsg_window_message">You must input and save some data before you can SEND_</string>
    <string name="toast_email_success_message">Email was sent successfully_</string>
    <string name="toast_email_fail_message">Email was not sent_</string>
    <string name="toast_test_email_success_msg">The test email was sent successfully_</string>
    <string name="toast_test_email_fail_msg">The test email failed to send_</string>
    <string name="toast_saved_settings_message">Saved Settings_</string>
    <string name="mail_log_e_title">MailApp</string>
    <string name="mail_log_e_message">Could not send email</string>
    <string name="toast_label_name_message">Please enter label name</string>
    <string name="toast_you_selected_message">You selected:</string>
    <string name="toast_wrote_to_db_message">Wrote Values to DB:</string>
    <string name="error_server_not_responding_message">error - server not responding</string>
    <string name="toast_encode_message">Encoded Password:</string>
    <string name="toast_decode_message">Decoded Password:</string>
    <string name="toast_failed_to_scan_message">Failed to scan. Please try again.</string>
  <string name="app_picker_name">Applications</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_back">Back</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_done">Done</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_google_shopper">Shopper</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product Search</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="history_clear_text">Clear history</string>
  <string name="history_clear_one_history_text">Clear</string>
  <string name="history_email_title">Barcode Scanner history</string>
  <string name="history_empty">Empty</string>
  <string name="history_empty_detail">No barcode scans have been recorded</string>
  <string name="history_send">Send history</string>
  <string name="history_title">History</string>
  <string name="menu_encode_mecard">Use MECARD</string>
  <string name="menu_encode_vcard">Use vCard</string>
  <string name="menu_help">Help</string>
  <string name="menu_history">History</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_google_books">Google Books</string>
  <string name="msg_google_product">Google Product Search</string>
  <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
  <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser_ Would you like to try it?</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable_</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem_</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_results">Results</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_sbc_unknown_page">Unknown page</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone_</string>
  <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_sure">Are you sure?</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible_</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_auto_focus_title">Use auto focus</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_title">1D barcodes</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
  <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
  <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
  <string name="preferences_disable_exposure_title">No exposure</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare_ Does not work on all phones_</string>
  <string name="preferences_front_light_title">Use front light</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_name">Settings</string>
  <string name="preferences_play_beep_title">Beep</string>
  <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
  <string name="preferences_remember_duplicates_title">Remember duplicates</string>
  <string name="preferences_result_title">Result settings</string>
  <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
  <string name="preferences_search_country">Search country</string>
  <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
  <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
  <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
  <string name="preferences_supplemental_title">Retrieve more info</string>
  <string name="preferences_vibrate_title">Vibrate</string>
  <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
    <string name="home_label">HOME</string>
    <string name="help_label">Help</string>
    <string name="about_label">About</string>
    <string name="log">Log</string>
    <string name="pending">Pending</string>
    <string name="configure">Configure</string>
    <string name="settings">Settings</string>
    <string name="error_log">Error Log</string>
</resources>