<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/home_label"
        android:icon="@drawable/ic_menu_back"
        app:showAsAction="always|withText"
        android:orderInCategory="100" >
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_config"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/configure"/>
    <item
        android:id="@+id/action_report"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/pending"/>
    <item
        android:id="@+id/action_log"
        android:orderInCategory="350"
        app:showAsAction="never"
        android:title="@string/log"/>
    <item
        android:id="@+id/action_error_log"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="@string/error_log"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="450"
        app:showAsAction="never"
        android:title="@string/help_label"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:title="@string/about_label"/>
</menu>